# lab08_demo

./: README.md
lab08_activity/: CMakeLists.txt  package.xml
lab08_activity/launch/: lab08.launch
lab08_activity/models/cube/: cube.config  cube.sdf
lab08_activity/models/cube_textured/: cube_textured.config  cube_textured.sdf
lab08_activity/src/nodes/: spawn_box_cpp.cpp
lab08_activity/src/scripts/: spawn_box_python.py
lab08_activity/urdf/: camera_model.xacro  lab08_camera_description.urdf.xacro  lab08_robot_description.urdf.xacro
mtrn4230_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
mtrn4230_gazebo/launch/: controller_utils.launch  lab08.launch
mtrn4230_gazebo/urdf/: camera_model.xacro  robotiq_epick_model.xacro
